test/error/LambdaUnexpected.ci
public static class Test
{
	public static bool Run()
	{
		x => x + 1; //ERROR: Unexpected lambda expression
		return true;
	}
}
